# 3777

./: CMakeLists.txt  config.lua.dist
src/: chat.cpp  definitions.h  game.cpp  luascript.cpp  luascript.h  player.h  protocolgame.cpp  spawn.cpp  status.cpp  status.h
src/vs/: theforgottenserver.vcxproj
